--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   firebase_database: ^10.2.5
   cupertino_icons: ^1.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
